[gd_scene load_steps=13 format=3 uid="uid://cxsswh67asvyi"]

[ext_resource type="Script" path="res://tower/tower.gd" id="1_2yi5r"]
[ext_resource type="Texture2D" uid="uid://phkadqksb2yh" path="res://tower/tower_base.png" id="2_6vs4u"]
[ext_resource type="Texture2D" uid="uid://jfj3e1c74bln" path="res://tower/tower_armor.png" id="3_50hef"]
[ext_resource type="PackedScene" uid="uid://emuvpna8bg4d" path="res://resources/sfx/variable_stream_player_2d.tscn" id="4_w6g3n"]
[ext_resource type="AudioStream" uid="uid://dva5bb7sod4pk" path="res://resources/sfx/shoot.wav" id="5_cfwtb"]
[ext_resource type="AudioStream" uid="uid://dcoibokyu4xc4" path="res://resources/sfx/tower_collapse.wav" id="6_ctjdd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_28s37"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3bdhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3e32k"]
atlas = ExtResource("2_6vs4u")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_scnub"]
atlas = ExtResource("2_6vs4u")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6i2j"]
atlas = ExtResource("2_6vs4u")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1w3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e32k")
}],
"loop": true,
"name": &"bolt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scnub")
}],
"loop": true,
"name": &"cannon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6i2j")
}],
"loop": true,
"name": &"lance",
"speed": 5.0
}]

[node name="Tower" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_2yi5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_28s37")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_3bdhl")

[node name="Base" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c1w3l")
animation = &"lance"

[node name="Armor" type="Sprite2D" parent="Base"]
visible = false
texture = ExtResource("3_50hef")

[node name="AttackTimer" type="Timer" parent="."]

[node name="ShootSound" parent="." instance=ExtResource("4_w6g3n")]
stream = ExtResource("5_cfwtb")

[node name="CollapseSound" parent="." instance=ExtResource("4_w6g3n")]
stream = ExtResource("6_ctjdd")

[connection signal="body_entered" from="AttackArea" to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="finished" from="CollapseSound" to="." method="_on_collapse_sound_finished"]
